--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.0",
+    "broken-link-checker": "^0.7.8",
     "clsx": "^2.0.0",
     "@docusaurus/core": "3.4.0",
     "@docusaurus/preset-classic": "3.4.0",
