--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
+    "@docusaurus/core": "3.4.0",
+    "@docusaurus/preset-classic": "3.4.0",
+    "@easyops-cn/docusaurus-search-local": "^0.44.5",
+    "@mdx-js/react": "^3.0.0",
     "bootstrap": "^5.3.0",
     "broken-link-checker": "^0.7.8",
     "clsx": "^2.0.0",
-    "@docusaurus/core": "3.4.0",
-    "@docusaurus/preset-classic": "3.4.0",
     "dompurify": "^3.0.11",
     "dotenv": "^16.3.1",
     "html-react-parser": "^5.0.6",
-    "@mdx-js/react": "^3.0.0",
     "marked": "^11.0.1",
     "octokit": "^2.0.14",
     "prism-react-renderer": "^2.3.0",
