Fixed typo: accidentally explanation not commented out

--- a/.github/workflows/D-deploy-to-gh-pages.yml
+++ b/.github/workflows/D-deploy-to-gh-pages.yml
@@ -2,7 +2,7 @@
 
 name: D - Deploy to GitHub Pages
 on:
-  A: Triggered on push to the main branch:
+  # A: Triggered on push to the main branch:
   push:
     branches:
       - main
