--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.4.0",
     "@docusaurus/types": "3.4.0"
-  },
+  },  
+  "overrides": {
+    "robot-directives": ">=0.3.0"
+  },  
   "browserslist": {
     "production": [
       ">0.5%",
