--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "@docusaurus/types": "3.4.0"
   },  
   "overrides": {
-    "robot-directives": ">=0.3.0"
-  },  
+    "robots-txt-guard": ">=1.0.2"
+  },
   "browserslist": {
     "production": [
       ">0.5%",
