--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "dotenv": "^16.3.1",
     "html-react-parser": "^5.0.6",
     "marked": "^11.0.1",
-    "octokit": "^2.0.14",
+    "octokit": ">=3.1.2",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
