--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "@docusaurus/types": "3.5.2"
   },  
   "overrides": {
-    "robots-txt-guard": ">=1.0.2"
+    "robots-txt-guard": "^1.0.2",
+    "tough-cookie": "^4.1.3"
   },
   "browserslist": {
     "production": [
